--- a/slides/tutorials_watercycle_answers.qmd
+++ b/slides/tutorials_watercycle_answers.qmd
@@ -54,13 +54,13 @@ Stumm's statement is theoretically true — there is enough **total freshwater**
 
 From the data:
 
-- **\~97%** of Earth’s water is saline (oceans).
+- **$ \approx $ 97%** of Earth’s water is saline (oceans).
 - Most freshwater is locked in **ice caps** and **groundwater**.
-- Only **\~0.27%** is accessible surface freshwater (Davie Fig. 1.6, Table 1.2).
+- Only ** $ \approx $ 0.27%** is accessible surface freshwater.
 
 This limited supply is unevenly distributed:
 
-- **Iceland** has >500,000 m³/person/year, while **Kuwait** has virtually none (Table 1.3).
+- **Iceland** has >500,000 $ m^3 / person / year $, while **Kuwait** has virtually none (Table 1.3).
 - Climate patterns (e.g., arid zones), topography, and land use create disparities in availability.
 - **Australia** has relatively high per-capita water resources but with extreme variability over space and time.
 
